fixed issues in duplicate rule where zooming was not possible..renamed 'Test' to 'Rule'

--- a/src/plugins/topology/checkDock.ui
+++ b/src/plugins/topology/checkDock.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Topology Check</string>
+   <string>Topology Checker</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
