--- a/src/ui/symbollayer/widget_symbolslist.ui
+++ b/src/ui/symbollayer/widget_symbolslist.ui
@@ -285,6 +285,9 @@
        <height>48</height>
       </size>
      </property>
+     <property name="textElideMode">
+      <enum>Qt::ElideNone</enum>
+     </property>
      <property name="flow">
       <enum>QListView::LeftToRight</enum>
      </property>
@@ -310,13 +313,6 @@
      <property name="topMargin">
       <number>2</number>
      </property>
-     <item>
-      <widget class="QLabel" name="lblSymbolName">
-       <property name="text">
-        <string>Symbol Name</string>
-       </property>
-      </widget>
-     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
