Add selection icons Add the following icons: * mIconSelectAdd * mIconSelectRemove * mIconSelectIntersect
Also delegates the responsibility for deletion to the instantiating class (QgisApp) so it is possible to use QgsExpressionSelectionDialog on the stack.

--- a/images/images.qrc
+++ b/images/images.qrc
@@ -523,6 +523,9 @@
         <file>themes/gis/mIconExpressionFilter.svg</file>
         <file>themes/gis/mIconExpressionPreview.svg</file>
         <file>themes/gis/mIconExpressionSelect.svg</file>
+        <file>themes/gis/mIconSelectAdd.svg</file>
+        <file>themes/gis/mIconSelectIntersect.svg</file>
+        <file>themes/gis/mIconSelectRemove.svg</file>
     </qresource>
     <qresource prefix="/images/tips">
         <file alias="symbol_levels.png">qgis_tips/symbol_levels.png</file>
