--- a/src/ui/qgsexpressionselectiondialogbase.ui
+++ b/src/ui/qgsexpressionselectiondialogbase.ui
@@ -36,6 +36,12 @@
    </item>
    <item row="1" column="1">
     <widget class="QToolButton" name="mButtonSelect">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>31</height>
+      </size>
+     </property>
      <property name="text">
       <string>...</string>
      </property>
